<resources>
    <string name="app_name">StationNavigators</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Station Navigators</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Scanner</string>
    <string name="menu_schedule">Schedule</string>
    <string name="menu_slideshow">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="porters">Porters</string>
    <string name="map">Map</string>
    <string name="voicerecognition">VoiceRecognition</string>
</resources>